--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,3 +11,12 @@
     padding: 16px;
     width: 50%;
 }
+
+ul {
+    list-style-type: none;
+}
+
+li.button {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
