--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,30 @@
-.btn {
-    display: block;
+.container {
+    width: 800px;
+    max-width: 80%;
+    background-color: white;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0 0 10px 2px;
     margin-left: auto;
     margin-right: auto;
+    display: block;
+    align-self: auto;
+  }
+
+body {
+    padding: 0;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
 }
 
-#quiz-field {
+.btn {
+    color: black;
+    background-color: cornflowerblue;
+    border: 1px solid blue;
+}
+
+.quiz-field {
     display: none;
     margin-left: auto;
     margin-right: auto;
@@ -12,11 +32,13 @@
     width: 50%;
 }
 
-ul {
-    list-style-type: none;
+.btn-grid {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 10px;
+    margin: 20px 0;
 }
 
-li.button {
-    margin-top: 30px;
-    margin-bottom: 30px;
-}
+.hide {
+    display: none;
+  }
